[gd_scene load_steps=3 format=3 uid="uid://bts3l1tbe6g7j"]

[ext_resource type="Script" path="res://scripts/menu-scripts/MainMenu.gd" id="1_tm1ue"]
[ext_resource type="Texture2D" uid="uid://cv4elc0m0xoc3" path="res://assets/button_dark.png" id="2_d7c7i"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tm1ue")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_right = 96.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_group_ = true

[node name="Start" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_d7c7i")
stretch_mode = 3

[node name="Label" type="Label" parent="VBoxContainer/Start"]
layout_mode = 0
offset_left = 78.0
offset_top = 3.0
offset_right = 118.0
offset_bottom = 26.0
text = "Start"

[node name="Options" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_d7c7i")
stretch_mode = 3

[node name="Label" type="Label" parent="VBoxContainer/Options"]
layout_mode = 0
offset_left = 65.0
offset_top = 3.0
offset_right = 127.0
offset_bottom = 26.0
text = "Options"

[node name="QuitToDesktop" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_d7c7i")
stretch_mode = 3

[node name="Label" type="Label" parent="VBoxContainer/QuitToDesktop"]
layout_mode = 0
offset_left = 76.0
offset_top = 3.0
offset_right = 116.0
offset_bottom = 26.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitToDesktop" to="." method="_on_quit_to_desktop_pressed"]
